JAR build process. Limited external properties to ones being modified. Changing nano discovery package. Using clientState from file consistently. Ensuring active subscription when reconnected to socket